--- a/college Projects/Exp4/styles.css
+++ b/college Projects/Exp4/styles.css
@@ -19,11 +19,18 @@
 	th{
 		width:100px;
 		height:50px;
-		background-color:DodgerBlue;
+		border:1px solid black;
+		background-color:rgb(10, 91, 173);
+	}
+	.slot th{
+		width:auto;
+		height: 60px;
+		padding:10px;
 	}
 	td{	
 		padding:20px;
-		height:40px
+		height:40px;
+		border:1px solid black;
 	}
 	ol{
 		margin-left:250px;
@@ -35,6 +42,6 @@
 	}
 	.day{
 		background-color:SlateBlue;
-
+		padding:8px;
 	}
 
